array.island.Island.scala.error
Compilation error:
Island:2: error: unclosed character literal
def ai-je fini l'exo? '(num:Array[Int]): Boolean = {
                      ^Island:2: error: '=' expected but identifier found.
def ai-je fini l'exo? '(num:Array[Int]): Boolean = {
      ^Island:6: error: illegal start of simple expression
}
^