array.island.Island.scala.code
def ai-je fini l'exo? '(num:Array[Int]): Boolean = {
  return true;
}